--- a/103 BMI/style.css
+++ b/103 BMI/style.css
@@ -4,8 +4,7 @@
 
 body{
     background-color: rgb(45, 56, 87);
-    margin: 0;
-    color: white;
+    margin: 10px;
 }
 
 h1{
@@ -16,6 +15,10 @@ h2{
     font-weight: 500;
 }
 h3{
+    color: rgba(255, 255, 255, 0.726);
+    font-weight: 300;
+}
+label{
     color: rgba(255, 255, 255, 0.726);
     font-weight: 300;
 }
