--- a/T24 Funkcje wbudowane/style.css
+++ b/T24 Funkcje wbudowane/style.css
@@ -1,4 +1,24 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 body{
-    background: #dee1c2;
-    padding-top: 50px;
+    background-color: rgb(45, 56, 87);
+    margin: 0;
+    color: white;
+}
+
+h1{
+    color: white;
+}
+h2{
+    color: rgba(255, 255, 255, 0.884);
+    font-weight: 500;
+}
+h3{
+    color: rgba(255, 255, 255, 0.726);
+    font-weight: 300;
+}
+p{
+    color: white;
 }
